			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.04a: *********************************

BUG: (09/27/05, DN) Compaction regression fails.
FIX: In constraint.LayoutCell replace "arcModified" by "arcMoved", so that change of bits doesn't lock arc.

BUG: (09/27/05, DN) NullPointerExceptions in BATCH mode.
FIX: In WindowFrame.createEditWindow insert "if (Main.BATCHMODE) return null;"

BUG: (09/27/05, DN) NullPointerException in TextUtils.formatDouble.
FIX: In TextUtils.formatDouble change numberFormatPostFix to numberFormatSpecific.

BUG: (09/27/05, DN) Icons should be always be expanded cells/instances (Bug #570)
FIX: In Cell.isWantExpanded() and NodeInst.setExpanded() ensure that icon instances are always expanded.

IMP: (09/27/05, DN) Branch "version8-03-stable" was created from tag "version8-03.h".
     The main branch has version number "8.04a".

BUG: (09/26/05, GVG) Changes in the code to be able to run regressions without setting the environment variable DISPLAY (bug 197).
FIX: Decouple messages stream from messages window. Regressions updated.

BUG: (09/26/05, RK) Bug: Node Info dialog has MoCMOS polysilicon resistors width and length swapped. (Bugzilla# 574)

BUG: (09/26/05, RK) Bug: NCC doesn't recogognize MoCMOS polysilicon resistors.
FIX: I made MoCMOS names same as TSMC90 (Bugzilla# 573)

BUG: (09/26/05, RK) I fixed: NCC: Comparing a Cell and its child yields match. (Bugzilla# 571)

BUG: (09/26/05, SMR) New VectorDrawing module doesn't handle complex orientations right.
FIX: In "VectorDrawing.render()", reverse Orientation concatenation.

BUG: (09/26/05, DN) Deleting arcs is too slow (Bug #547)
FIX: Guard some of checkInvariants by "if (Main.getDebug()).

BUG: (09/26/05, DN) GetInfoArc dialog creates "ART_color" variable though nothing was changed.
FIX: In GetInfoArc.doLoadInfo assign "DEFAULT COLOR" to initial value".
